--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <title>React App</title>
 </head>
 
-<body class="bg-gray-300">
+<body class="bg-gray-300 box-border">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
